fixed spacing on boxes after new CSS

--- a/src/components/Admin/Calendar Components/Calendar.css
+++ b/src/components/Admin/Calendar Components/Calendar.css
@@ -3,7 +3,8 @@
 }
 
 .section {
-  flex: 0 0 33%;
+  flex: 33%;
+  /* align-items: center; */
 }
 
 .calendarSection {
